class MsgException extends RuntimeException {
  public MsgException(String message){
    super(message);
  }
}